cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_22294_security.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "JENKINS SECURITY GROUPS 1.0.1 - Author Chris Moran",

  "Parameters": {
    "VPC": {
      "Type": "String"
    }
  },

  "Resources": {
    "DevSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription" : "Basic Web Access Security",
        "SecurityGroupIngress": [
          { "CidrIp": "0.0.0.0/0", "IpProtocol": "tcp", "FromPort": "8080", "ToPort": "8080" },
          { "CidrIp": "27.99.10.118/32", "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22" },
          { "CidrIp": "203.206.181.109/32", "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22" }
        ],
        "VpcId": { "Ref": "VPC" }
      }
    }
  },

  "Outputs": {
    "DevSecurityGroup": {
      "Value": {"Fn::GetAtt" : ["DevSecurityGroup","GroupId"]}
    }
  }
}
